--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: csharp
-solution: FindReferenceWithRoslyn.sln
+solution: ResDiffAnalyse.sln
 install:
   - nuget # lets get version number
   - nuget restore FindReferenceWithRoslyn.sln -Verbosity detailed
